<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.tasks.notes.EditNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/edit_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_app_bar_height"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/edit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:id="@+id/edit_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/edit_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:paddingLeft="-2dp"
                        android:paddingRight="16dp"
                        android:src="@drawable/ic_clear_white_24dp" />

                    <TextView
                        android:id="@+id/edit_delete"
                        style="@style/AppBarTextButton"
                        android:text="@string/edit_delete"
                        android:visibility="gone" />
                    <!--android:layout_toStartOf="@id/edit_save"-->

                    <TextView
                        android:id="@+id/edit_save"
                        style="@style/AppBarTextButton"
                        android:layout_alignParentEnd="true"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/edit_save" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <EditText
            android:id="@+id/edit_name"
            style="@style/FullWidthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/edit_description"
            style="@style/FullWidthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <HorizontalScrollView
            android:id="@+id/edit_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/colors_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>
